# SET_LAB

./: .gitignore  Makefile  README  README.md  aux.c  http.c  lab1_1.c  lab1_2.c  lab1_22.c  lab1_23.c  lab1_24.c  note  relazione.odt
bush_minus_minus-students/: CMakeLists.txt  Makefile  README  ast.c  ast.h  autogen_lexer.c  autogen_parser.c  autogen_parser.h  bmm.c  lexer.l  parser.y  shell.c  shell.h  str.c  str.h  tags  utils.c  utils.h  var_table.c  var_table.h
forknexec/: lab1_23.c  lab1_24.c
incapache-students/: README  RELAZIONE LABORATORIO IncApache 2.docx  autotester.c  http.c  incApache.h  main.c  request_script.sh  test_script.sh  threads.c
incapache-students/results/: incapache2.2-debug_GET_response.txt  incapache2.2-debug_HEAD_response.txt
output/: differenze.txt  result.txt  results.txt  ris_udp_nostro.txt  ris_udp_precompilato.txt  risultato_strace_tcp_nostro.txt  risultato_strace_tcp_precompilato.txt  tcp_differenze.txt  udp_differenze.txt
pingpong/: CMakeLists.txt  Makefile  README  README.txt  relazione.odt  sepc
pingpong/data/: Makefile  tcp_1024.out  tcp_12.out  tcp_12288.out  tcp_128.out  tcp_131072.out  tcp_1536.out  tcp_16.out  tcp_16384.out  tcp_192.out  tcp_196608.out  tcp_2048.out  tcp_24.out  tcp_24576.out  tcp_256.out  tcp_262144.out  tcp_3072.out  tcp_32.out  tcp_32768.out.broken  tcp_384.out  tcp_48.out  tcp_49152.out  tcp_512.out  tcp_524288.out  tcp_6144.out  tcp_64.out  tcp_65536.out  tcp_768.out  tcp_8.out  tcp_96.out  tcp_98304.out  udp_1024.out  udp_12.out  udp_12288.out  udp_12288.out.broken  udp_128.out  udp_1536.out  (+16 more)
(+41 files in other folders)
